# text-to-minecraft

./: .env.sample  .gitignore  GUI.py  README.md  bot.py  bot_old.py  forge.config.ts  global.d.ts  index.html  llm.py  llm_testing.py  main.py  package-lock.json  package.json  pyproject.toml  run.bat  setup.bat  skills.py  tailwind.config.ts  test.py  tsconfig.json  utils.py  vite.config.ts  vite.main.config.mts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.mts  vite.renderer.config.ts
data/custom_schematics_json/: fountain.json  garden.json  small_house.json
src/: App.tsx  ConnectForm.css  ConnectForm.tsx  GUI.py  bot.py  bot.ts  index.css  llm.py  main.py  main.ts  preload.d.ts  preload.ts  renderer.tsx
src-tauri/: tauri.conf.json
src/backend/: bot-observer.ts  bot.ts  commands.ts  logging.ts  main.ts  minecraft.ts
src/backend/ai/: actions.ts  api.ts  execute.ts  minecraft.ts  model.ts  skills.ts
src/backend/config/: keys.ts  llm.ts  secrets.ts
src/bot/: bot.ts  commands.ts  instanceManager.ts  manager.ts
src/components/: App.tsx  ConnectForm.css  ConnectForm.tsx  Profile.tsx
src/frontend/: App.tsx  global.css  index.css  renderer.tsx
src/frontend/components/: ActivityLog.tsx  ConnectForm.module.css  ConnectForm.tsx  GeminiForm.module.css  GeminiForm.tsx  OpenAIForm.tsx  Settings.tsx
src/frontend/components/settings/: Settings.module.css  Settings.tsx
src/frontend/components/ui/: Button.tsx  Form.tsx  Header.tsx  Input.tsx  NavButton.tsx  Page.tsx
src/frontend/contexts/: SetupContext.tsx  ThemeContext.tsx
src/frontend/pages/: Dashboard.module.css  Dashboard.tsx  Settings.tsx  Setup.tsx
src_old/: GUI.py  node.py
tests/: commands.test.ts  main.test.ts  test_clean_code.py  test_is_valid_python.py  test_parse_args.py  test_postprocess_code.py
tests/backend/: api.test.ts  commands.test.ts
