[tool.poetry]
name = "text-to-minecraft"
version = "0.1.0"
description = "An AI that constructs structures in Minecraft for you!"
authors = ["ryyHardy <ryyhardy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mineflayer = "^0.0.14"
openai = "^1.45.1"
langchain = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
