[project]
name = "text-to-minecraft"
version = "0.1.0"
description = "An AI that builds structures in Minecraft for you!"
authors = [{ name = "ryyHardy", email = "ryyhardy@gmail.com" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.0.1,<2",
    "javascript>=1!1.2.2",
    "openai>=1.51.0,<2",
    "langchain>=0.3.2,<0.4",
    "langchain-openai>=0.2.2,<0.3",
    "flet>=0.25.2",
]

[project.scripts]
text-to-minecraft = "src.main:main"

[dependency-groups]
test = ["pytest>=8.3.3,<9"]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flet.app]
path = "src"
